--- a/sound/soc/codecs/Makefile
+++ b/sound/soc/codecs/Makefile
@@ -290,7 +290,7 @@ obj-$(CONFIG_SND_SOC_STA32X)   += snd-soc-sta32x.o
 obj-$(CONFIG_SND_SOC_STA350)   += snd-soc-sta350.o
 obj-$(CONFIG_SND_SOC_STA529)   += snd-soc-sta529.o
 obj-$(CONFIG_SND_SOC_STAC9766)	+= snd-soc-stac9766.o
-obj-$(CONFIG_ARCH_SUNXI)	+= snd-soc-sun6i-codec.o
+obj-$(CONFIG_SND_SOC_SUN6I)	+= snd-soc-sun6i-codec.o
 obj-$(CONFIG_SND_SOC_TAS2552)	+= snd-soc-tas2552.o
 obj-$(CONFIG_SND_SOC_TAS5086)	+= snd-soc-tas5086.o
 obj-$(CONFIG_SND_SOC_TAS571X)	+= snd-soc-tas571x.o
