playback stream works
Signed-off-by: Maxime Ripard <maxime.ripard@free-electrons.com>

--- a/sound/soc/allwinner/Makefile
+++ b/sound/soc/allwinner/Makefile
@@ -1,3 +1,4 @@
-snd-soc-sun6i-audio-codec-objs := sun6i-codec.o
+obj-$(CONFIG_SND_SOC_SUN6I_AUDIO_CODEC) += sun6i-audio-codec.o
+obj-$(CONFIG_SND_SOC_SUN6I_AUDIO_CODEC) += sun6i-audio-card.o
+obj-$(CONFIG_SND_SOC_SUN6I_AUDIO_CODEC) += sun6i-audio-pcm.o
 
-obj-$(CONFIG_SND_SOC_SUN6I_AUDIO_CODEC) += snd-soc-sun6i-audio-codec.o
